--- a/ingress/base/template/deployment.yaml
+++ b/ingress/base/template/deployment.yaml
@@ -145,7 +145,7 @@ spec:
         args:
           - envoy
           - shutdown-manager
-        image: quay.io/cybozu/contour:v1.3.0.1
+        image: quay.io/cybozu/contour:1.3.0.1
         imagePullPolicy: Always
         lifecycle:
           preStop:
