metallb: remove METALLB_ML_* envoronment to disable memberlist for L2 mode
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/metallb/base/deployment.yaml
+++ b/metallb/base/deployment.yaml
@@ -16,6 +16,15 @@ spec:
         resources:
           limits:
             cpu: null
+        env:
+        - $patch: delete
+          name: METALLB_ML_BIND_ADDR
+        - $patch: delete
+          name: METALLB_ML_LABELS
+        - $patch: delete
+          name: METALLB_ML_NAMESPACE
+        - $patch: delete
+          name: METALLB_ML_SECRET_KEY
 ---
 apiVersion: apps/v1
 kind: Deployment
