cert-manager: defer self-signed-issuer sync wave.
Signed-off-by: UMEZAWA Takeshi <takeshi-umezawa@cybozu.co.jp>

--- a/cert-manager/overlays/kind/clusterissuer.yaml
+++ b/cert-manager/overlays/kind/clusterissuer.yaml
@@ -1,6 +1,8 @@
 apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   name: self-signed-issuer
 spec:
   selfSigned: {}
