--- a/test/rook/ceph-for-ss/cluster.yaml
+++ b/test/rook/ceph-for-ss/cluster.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: ceph-for-ss
 spec:
   dataDirHostPath: /var/lib/rook
+  cleanupPolicy:
+    deleteDataDirOnHosts: yes-really-destroy-data
   mon:
     count: 1
     allowMultiplePerNode: false
@@ -14,34 +16,36 @@ spec:
         resources:
           requests:
             storage: 10Gi
+  mgr:
+    modules:
+      - name: pg_autoscaler
+        enabled: true
   cephVersion:
     image: quay.io/cybozu/ceph:14.2.8.4
     allowUnsupported: false
   dashboard:
     enabled: false
     ssl: true
-  network:
-    hostNetwork: false
   storage:
     storageClassDeviceSets:
       - name: set1
         count: 1
         resources:
         volumeClaimTemplates:
-        - metadata:
-            name: data
-          spec:
-            resources:
-              requests:
-                storage: 5Gi
-            # IMPORTANT: Change the storage class depending on your environment (e.g. local-storage, gp2)
-            storageClassName: local-storage
-            volumeMode: Block
-            accessModes:
-              - ReadWriteOnce
+          - metadata:
+              name: data
+            spec:
+              resources:
+                requests:
+                  storage: 5Gi
+              # IMPORTANT: Change the storage class depending on your environment (e.g. local-storage, gp2)
+              storageClassName: local-storage
+              volumeMode: Block
+              accessModes:
+                - ReadWriteOnce
         placement:
           tolerations:
-          - key: cke.cybozu.com/role
-            operator: Equal
-            value: storage
-            effect: NoExecute
+            - key: cke.cybozu.com/role
+              operator: Equal
+              value: storage
+              effect: NoExecute
