cert-manager: Add crd patch

--- a/cert-manager/base/kustomization.yaml
+++ b/cert-manager/base/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - upstream/cert-manager.yaml
   - rbac.yaml
 patches:
+  - crd.yaml
   - deployment.yaml
   - mutatingwebhookconfiguration.yaml
   - validatingwebhookconfiguration.yaml
