cert-manager: Fix sync-wave of cert-manager-webhook

--- a/cert-manager/base/deployment.yaml
+++ b/cert-manager/base/deployment.yaml
@@ -52,6 +52,8 @@ kind: Deployment
 metadata:
   name: cert-manager-webhook
   namespace: cert-manager
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   template:
     spec:
