metallb: add patch for imagePullPolicy to keep value to IfNotPresent
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/metallb/base/deployment.yaml
+++ b/metallb/base/deployment.yaml
@@ -9,6 +9,7 @@ spec:
       containers:
       - name: speaker
         image: quay.io/cybozu/metallb:0.8.3.1
+        imagePullPolicy: IfNotPresent
         command: ["/speaker"]
         securityContext:
           capabilities:
@@ -41,6 +42,7 @@ spec:
       containers:
       - name: controller
         image: quay.io/cybozu/metallb:0.8.3.1
+        imagePullPolicy: IfNotPresent
         command: ["/controller"]
         resources:
           limits:
