ingress: update manifests.
Signed-off-by: Kazuhito MATSUDA <kazuhito.matuda@gmail.com>

--- a/ingress/base/common/rbac.yaml
+++ b/ingress/base/common/rbac.yaml
@@ -49,7 +49,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - extensions
+  - "networking.k8s.io"
   resources:
   - ingresses
   verbs:
@@ -59,11 +59,14 @@ rules:
 - apiGroups:
   - "networking.k8s.io"
   resources:
-  - ingresses
+  - "ingresses/status"
   verbs:
   - get
   - list
   - watch
+  - patch
+  - post
+  - update
 - apiGroups: ["contour.heptio.com"]
   resources: ["ingressroutes", "tlscertificatedelegations"]
   verbs:
@@ -75,6 +78,21 @@ rules:
   - patch
 - apiGroups: ["projectcontour.io"]
   resources: ["httpproxies", "tlscertificatedelegations"]
+  verbs:
+  - get
+  - list
+  - watch
+  - put
+  - post
+  - patch
+- apiGroups:
+  - "projectcontour.io"
+  resources:
+  - "httpproxies/status"
+  verbs:
+  - update
+- apiGroups: ["networking.x.k8s.io"]
+  resources: ["gatewayclasses", "gateways", "httproutes", "tcproutes"]
   verbs:
   - get
   - list
