--- a/ingress/base/contour/02-job-certgen.yaml
+++ b/ingress/base/contour/02-job-certgen.yaml
@@ -30,18 +30,13 @@ rules:
   resources:
   - secrets
   verbs:
-  - list
-  - watch
   - create
-  - get
-  - put
-  - post
-  - patch
+  - update
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: contour-certgen
+  name: contour-certgen-v1.5.0
   namespace: projectcontour
 spec:
   ttlSecondsAfterFinished: 0
@@ -52,13 +47,20 @@ spec:
     spec:
       containers:
       - name: contour
+        # This version is set to latest because Job specs are immutable;
+        # if we change this on each version, you can no longer upgrade
+        # just by applying the deployment YAML.
+        # See #2423, #2395, #2150, and #2030 for earlier questions about this.
         image: docker.io/projectcontour/contour:latest
         imagePullPolicy: Always
         command:
         - contour
         - certgen
-        - --incluster
         - --kube
+        - --incluster
+        - --overwrite
+        - --secrets-format=compact
+        - --namespace=$(CONTOUR_NAMESPACE)
         env:
         - name: CONTOUR_NAMESPACE
           valueFrom:
