ingress-watcher: fix test
Add overlays to prepare global HTTPProxy and ingress-watcher-config-global

Signed-off-by: dulltz <isrgnoe@gmail.com>

--- a/monitoring/overlays/osaka0/kustomization.yaml
+++ b/monitoring/overlays/osaka0/kustomization.yaml
@@ -4,6 +4,8 @@ resources:
   - ../../base
   - grafana-operator/httpproxy.yaml
   - pushgateway/httpproxy.yaml
+  - ingress-watcher/httpproxy.yaml
+  - ingress-watcher/configmap.yaml
 patchesStrategicMerge:
   - prometheus/statefulset.yaml
   - grafana-operator/grafana.yaml
