--- a/monitoring/overlays/osaka0/ingress-watcher/httpproxy.yaml
+++ b/monitoring/overlays/osaka0/ingress-watcher/httpproxy.yaml
@@ -17,6 +17,7 @@ spec:
       services:
         - name: ingress-health-https
           port: 80
+      permitInsecure: true
       timeoutPolicy:
         response: 2m
         idle: 5m
