--- a/monitoring/base/ingress-watcher/deployment.yaml
+++ b/monitoring/base/ingress-watcher/deployment.yaml
@@ -24,7 +24,7 @@ spec:
         args:
           - export
           - --config=/etc/ingress-watcher/config.yaml
-        image: quay.io/cybozu/ingress-watcher:0.1.3
+        image: quay.io/llamerada_jp/debug:ingress-watcher-01
         volumeMounts:
           - name: config
             mountPath: /etc/ingress-watcher
