Remove TLS config from pushgateway.
Signed-off-by: morimoto-cybozu <kenji_morimoto@cybozu.co.jp>

--- a/monitoring/base/kustomization.yaml
+++ b/monitoring/base/kustomization.yaml
@@ -20,8 +20,10 @@ resources:
   - alertmanager/deployment.yaml
   - alertmanager/service.yaml
   - pushgateway/deployment.yaml
+  - pushgateway/httpproxy.yaml
   - pushgateway/service.yaml
   - ingress-health/deployment.yaml
+  - ingress-health/httpproxy.yaml
   - ingress-health/service.yaml
 configMapGenerator:
   - name: prometheus-server-conf
