topolvm: update to v0.6.0
Signed-off-by: Toshikuni Fukaya <toshikuni-fukaya@cybozu.co.jp>

--- a/topolvm/base/kustomization.yaml
+++ b/topolvm/base/kustomization.yaml
@@ -24,9 +24,9 @@ configMapGenerator:
     files:
       - ./upstream/base/scheduler-options.yaml
 
-imageTags:
+images:
   - name: quay.io/topolvm/topolvm
-    newTag: 0.5.2
+    newTag: 0.6.0
 
 patchesJSON6902:
 - target:
