--- a/topolvm/base/upstream/overlays/daemonset-scheduler/kustomization.yaml
+++ b/topolvm/base/upstream/overlays/daemonset-scheduler/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - ../../base
   - scheduler.yaml
-imageTags:
+images:
   - name: quay.io/topolvm/topolvm
-    newTag: 0.5.2
+    newTag: 0.6.0
