split rook application to rook-hdd/ssd
Signed-off-by: Toshikuni Fukaya <toshikuni-fukaya@cybozu.co.jp>

--- a/argocd-config/base/kustomization.yaml
+++ b/argocd-config/base/kustomization.yaml
@@ -16,7 +16,8 @@ resources:
 - namespaces.yaml
 - neco-admission.yaml
 - network-policy.yaml
-- rook.yaml
+- rook-hdd.yaml
+- rook-ssd.yaml
 - sandbox.yaml
 - secrets.yaml
 - team-management.yaml
