--- a/argocd-config/base/rook-hdd.yaml
+++ b/argocd-config/base/rook-hdd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rook
+  name: rook-hdd
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "6"
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: https://github.com/cybozu-go/neco-apps.git
     targetRevision: release
-    path: rook/base
+    path: rook/base/ceph-hdd
   destination:
     server: https://kubernetes.default.svc
     namespace: ceph-hdd
@@ -20,12 +20,6 @@ spec:
       selfHeal: true
   ignoreDifferences:
     # count may be changed manually
-    - group: ceph.rook.io
-      kind: CephCluster
-      name: ceph-ssd
-      namespace: ceph-ssd
-      jsonPointers:
-        - /spec/storage/storageClassDeviceSets/0/count
     - group: ceph.rook.io
       kind: CephCluster
       name: ceph-hdd
