--- a/argocd-config/overlays/gcp/rook-hdd.yaml
+++ b/argocd-config/overlays/gcp/rook-hdd.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rook
+  name: rook-hdd
   namespace: argocd
 spec:
   source:
-    path: rook/overlays/gcp
+    path: rook/overlays/gcp/hdd
