--- a/argocd-config/overlays/osaka0/rook.yaml
+++ b/argocd-config/overlays/osaka0/rook.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rook
+  name: rook-hdd
   namespace: argocd
 spec:
   source:
