ceph: edit manifest for stage to pass test
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/argocd-config/overlays/stage0/kustomization.yaml
+++ b/argocd-config/overlays/stage0/kustomization.yaml
@@ -23,5 +23,6 @@ patchesStrategicMerge:
 - team-management.yaml
 - teleport.yaml
 - topolvm.yaml
-- rook.yaml
+- rook-hdd.yaml
+- rook-ssd.yaml
 - unbound.yaml
