--- a/argocd-config/overlays/osaka0/rook.yaml
+++ b/argocd-config/overlays/osaka0/rook.yaml
@@ -3,6 +3,32 @@ kind: Application
 metadata:
   name: rook
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "11"
 spec:
+  project: default
   source:
+    repoURL: https://github.com/cybozu-go/neco-apps.git
+    targetRevision: release
     path: rook/overlays/osaka0
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: ceph-hdd
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+  ignoreDifferences:
+    # count may be changed manually
+    - group: ceph.rook.io
+      kind: CephCluster
+      name: ceph-ssd
+      namespace: ceph-ssd
+      jsonPointers:
+        - /spec/storage/storageClassDeviceSets/0/count
+    - group: ceph.rook.io
+      kind: CephCluster
+      name: ceph-hdd
+      namespace: ceph-hdd
+      jsonPointers:
+        - /spec/storage/storageClassDeviceSets/0/count
