neco-admission: do not apply mutating webhook for control-plane pods

--- a/neco-admission/base/webhook.yaml
+++ b/neco-admission/base/webhook.yaml
@@ -18,6 +18,11 @@ webhooks:
         operator: NotIn
         values:
           - neco-admission
+  namespaceSelector:
+    matchExpressions:
+    - key: control-plane
+      operator: NotIn
+      values: ["true"]
   rules:
   - apiGroups:
     - ""
