--- a/rook/base/ceph-hdd/role.yaml
+++ b/rook/base/ceph-hdd/role.yaml
@@ -45,6 +45,18 @@ rules:
   - network-attachment-definitions
   verbs:
   - get
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  - prometheusrules
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - delete
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
