cert-manager: upgrade image version to v1.0.4.1
Signed-off-by: Masayuki Ishii <masa213f@gmail.com>

--- a/cert-manager/base/kustomization.yaml
+++ b/cert-manager/base/kustomization.yaml
@@ -7,3 +7,6 @@ patches:
   - deployment.yaml
   - mutatingwebhookconfiguration.yaml
   - validatingwebhookconfiguration.yaml
+images:
+  - name: quay.io/cybozu/cert-manager
+    newTag: 1.0.4.1
