--- a/cert-manager/base/deployment.yaml
+++ b/cert-manager/base/deployment.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: cert-manager
-          image: quay.io/cybozu/cert-manager:0.15.1.1
+          image: quay.io/cybozu/cert-manager
           command:
           - cainjector
 ---
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: cert-manager
-          image: quay.io/cybozu/cert-manager:0.15.1.1
+          image: quay.io/cybozu/cert-manager
           command:
           - controller
           args:
@@ -55,7 +55,7 @@ spec:
     spec:
       containers:
         - name: cert-manager
-          image: quay.io/cybozu/cert-manager:0.15.1.1
+          image: quay.io/cybozu/cert-manager
           command:
           - webhook
           volumeMounts:
