--- a/ingress/base/contour/03-contour.yaml
+++ b/ingress/base/contour/03-contour.yaml
@@ -42,12 +42,12 @@ spec:
         - --xds-port=8001
         - --envoy-service-http-port=80
         - --envoy-service-https-port=443
-        - --contour-cafile=/ca/cacert.pem
+        - --contour-cafile=/certs/ca.crt
         - --contour-cert-file=/certs/tls.crt
         - --contour-key-file=/certs/tls.key
         - --config-path=/config/contour.yaml
         command: ["contour"]
-        image: docker.io/projectcontour/contour:v1.4.0
+        image: docker.io/projectcontour/contour:v1.9.0
         imagePullPolicy: Always
         name: contour
         ports:
@@ -69,9 +69,6 @@ spec:
         volumeMounts:
           - name: contourcert
             mountPath: /certs
-            readOnly: true
-          - name: cacert
-            mountPath: /ca
             readOnly: true
           - name: contour-config
             mountPath: /config
@@ -97,9 +94,6 @@ spec:
         - name: contourcert
           secret:
             secretName: contourcert
-        - name: cacert
-          secret:
-            secretName: cacert
         - name: contour-config
           configMap:
             name: contour
