--- a/ingress/base/contour/03-envoy.yaml
+++ b/ingress/base/contour/03-envoy.yaml
@@ -29,14 +29,15 @@ spec:
         args:
           - envoy
           - shutdown-manager
-        image: docker.io/projectcontour/contour:v1.4.0
+        image: docker.io/projectcontour/contour:v1.9.0
         imagePullPolicy: Always
         lifecycle:
           preStop:
-            httpGet:
-              path: /shutdown
-              port: 8090
-              scheme: HTTP
+            exec:
+              command:
+                - /bin/contour
+                - envoy
+                - shutdown
         livenessProbe:
           httpGet:
             path: /healthz
@@ -52,7 +53,7 @@ spec:
         - --log-level info
         command:
         - envoy
-        image: docker.io/envoyproxy/envoy:v1.14.1
+        image: docker.io/envoyproxy/envoy:v1.15.1
         imagePullPolicy: IfNotPresent
         name: envoy
         env:
@@ -86,8 +87,6 @@ spec:
             mountPath: /config
           - name: envoycert
             mountPath: /certs
-          - name: cacert
-            mountPath: /ca
         lifecycle:
           preStop:
             httpGet:
@@ -100,12 +99,13 @@ spec:
         - /config/envoy.json
         - --xds-address=contour
         - --xds-port=8001
-        - --envoy-cafile=/ca/cacert.pem
+        - --resources-dir=/config/resources
+        - --envoy-cafile=/certs/ca.crt
         - --envoy-cert-file=/certs/tls.crt
         - --envoy-key-file=/certs/tls.key
         command:
         - contour
-        image: docker.io/projectcontour/contour:v1.4.0
+        image: docker.io/projectcontour/contour:v1.9.0
         imagePullPolicy: Always
         name: envoy-initconfig
         volumeMounts:
@@ -114,14 +114,12 @@ spec:
         - name: envoycert
           mountPath: /certs
           readOnly: true
-        - name: cacert
-          mountPath: /ca
-          readOnly: true
         env:
         - name: CONTOUR_NAMESPACE
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+      automountServiceAccountToken: false
       serviceAccountName: envoy
       terminationGracePeriodSeconds: 300
       volumes:
@@ -130,7 +128,4 @@ spec:
         - name: envoycert
           secret:
             secretName: envoycert
-        - name: cacert
-          secret:
-            secretName: cacert
       restartPolicy: Always
