--- a/network-policy/base/calico/deployment.yaml
+++ b/network-policy/base/calico/deployment.yaml
@@ -7,8 +7,7 @@ spec:
   template:
     spec:
       containers:
-      - image: quay.io/cybozu/calico:3.14.1.1
-        name: calico-typha
+      - name: calico-typha
         command:
           - tini
           - --
