--- a/network-policy/base/kustomization.yaml
+++ b/network-policy/base/kustomization.yaml
@@ -1,5 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+images:
+  - name: calico/node
+    newName: quay.io/cybozu/calico
+    newTag: 3.16.1.1
+  - name: calico/typha
+    newName: quay.io/cybozu/calico
+    newTag: 3.16.1.1
 resources:
   - calico/upstream/calico-policy-only.yaml
   - calico/podsecuritypolicy.yaml
