--- a/ingress/base/patch/crd.yaml
+++ b/ingress/base/patch/crd.yaml
@@ -1,27 +1,18 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
-  name: ingressroutes.contour.heptio.com
+  name: extensionservices.projectcontour.io
 status: null
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  creationTimestamp: null
-  name: tlscertificatedelegations.contour.heptio.com
-spec:
-  scope: Namespaced
-status: null
----
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
   name: httpproxies.projectcontour.io
 status: null
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
