--- a/monitoring/base/kube-state-metrics/service.yaml
+++ b/monitoring/base/kube-state-metrics/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kube-state-metrics
-  namespace: kube-system
   labels:
     app.kubernetes.io/name: kube-state-metrics
+    app.kubernetes.io/version: v1.9.7
   annotations:
     prometheus.io/scrape: 'true'
+  name: kube-state-metrics
+  namespace: kube-system
 spec:
   ports:
   - name: http-metrics
