--- a/ingress/base/template/deployment.yaml
+++ b/ingress/base/template/deployment.yaml
@@ -53,7 +53,7 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: metadata.name
-        image: quay.io/cybozu/contour:1.6.0.1
+        image: quay.io/cybozu/contour
         imagePullPolicy: IfNotPresent
         lifecycle:
           preStop:
@@ -86,7 +86,7 @@ spec:
       - env:
         - name: CP_DEFAULT_ISSUER_NAME
           value: clouddns
-        image: quay.io/cybozu/contour-plus:0.5.0
+        image: quay.io/cybozu/contour-plus
         name: contour-plus
       dnsPolicy: ClusterFirst
       serviceAccountName: contour
@@ -145,7 +145,7 @@ spec:
         args:
           - envoy
           - shutdown-manager
-        image: quay.io/cybozu/contour:1.6.0.1
+        image: quay.io/cybozu/contour
         imagePullPolicy: Always
         lifecycle:
           preStop:
@@ -179,7 +179,7 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: metadata.name
-        image: quay.io/cybozu/envoy:1.14.5.1
+        image: quay.io/cybozu/envoy
         imagePullPolicy: IfNotPresent
         lifecycle:
           preStop:
@@ -214,7 +214,7 @@ spec:
         - mountPath: /certs
           name: envoycert
       - name: liveness-probe
-        image: quay.io/cybozu/envoy:1.14.5.1
+        image: quay.io/cybozu/envoy
         command:
           - /usr/local/bin/livenessprobe
       initContainers:
@@ -233,7 +233,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: quay.io/cybozu/contour:1.6.0.1
+        image: quay.io/cybozu/contour
         imagePullPolicy: IfNotPresent
         name: envoy-initconfig
         volumeMounts:
