ingress: some fixes
Signed-off-by: Masayuki Ishii <masa213f@gmail.com>

--- a/ingress/base/common/rbac_admin.yaml
+++ b/ingress/base/common/rbac_admin.yaml
@@ -18,3 +18,9 @@ rules:
   - patch
   - delete
   - deletecollection
+- apiGroups:
+  - projectcontour.io
+  resources:
+  - httpproxies/status
+  verbs:
+  - get
