--- a/ingress/base/kustomization.yaml
+++ b/ingress/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - contour/01-crds.yaml
+  - contour/02-role-contour.yaml
   - common
   - global
   - forest
