Fix alert tests

--- a/test/alert_test/etcd.yaml
+++ b/test/alert_test/etcd.yaml
@@ -45,7 +45,7 @@ tests:
               runbook: "Please consider manual compaction and defrag. https://github.com/etcd-io/etcd/blob/master/Documentation/op-guide/maintenance.md"
   - interval: 30m
     input_series:
-      - series: 'etcd_mvcc_db_total_size_in_use_in_bytes{instance="10.0.0.1:2379", job="etcd", __name__="etcd"}'
+      - series: 'etcd_mvcc_db_total_size_in_use_in_bytes{instance="10.0.0.1:2379", job="etcd"}'
         values: '0+15000001x2'
     alert_rule_test:
       - eval_time: 60m
