Update prometheus to 2.21.0

--- a/monitoring/base/prometheus/clusterrole.yaml
+++ b/monitoring/base/prometheus/clusterrole.yaml
@@ -7,13 +7,18 @@ rules:
     resources:
       - nodes
       - nodes/proxy
+      - nodes/metrics
       - services
       - endpoints
       - pods
+      - ingresses
+      - configmaps
     verbs: ["get", "list", "watch"]
   - apiGroups:
       - extensions
+      - networking.k8s.io
     resources:
+      - ingresses/status
       - ingresses
     verbs: ["get", "list", "watch"]
   - nonResourceURLs: ["/metrics"]
