--- a/monitoring/base/grafana-operator/upstream/cluster_roles/cluster_role_grafana_operator.yaml
+++ b/monitoring/base/grafana-operator/upstream/cluster_roles/cluster_role_grafana_operator.yaml
@@ -9,3 +9,9 @@ rules:
       - grafanadashboards
       - grafanadashboards/status
     verbs: ['get', 'list', 'update', 'watch']
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+    verbs: ['get', 'list', 'watch']
+
