--- a/monitoring/base/kustomization.yaml
+++ b/monitoring/base/kustomization.yaml
@@ -57,3 +57,6 @@ images:
   - name: quay.io/coreos/kube-state-metrics
     newName: quay.io/cybozu/kube-state-metrics
     newTag: 1.9.7.1
+  - name: quay.io/integreatly/grafana-operator
+    newName: quay.io/cybozu/grafana-operator
+    newTag: 3.6.0.1
