ingress: remove contour.heptio.com
Signed-off-by: Masayuki Ishii <masa213f@gmail.com>

--- a/argocd/base/service.yaml
+++ b/argocd/base/service.yaml
@@ -3,6 +3,6 @@ kind: Service
 metadata:
   name: argocd-server
   annotations:
-    contour.heptio.com/upstream-protocol.h2: 443,https
+    projectcontour.io/upstream-protocol.h2: 443,https
 spec:
   type: NodePort
