--- a/argocd/base/neco/service.yaml
+++ b/argocd/base/neco/service.yaml
@@ -8,7 +8,7 @@ metadata:
   name: argocd-server-https
   namespace: argocd
   annotations:
-    contour.heptio.com/upstream-protocol.tls: 443,https
+    projectcontour.io/upstream-protocol.tls: 443,https
 spec:
   ports:
     - name: http
