--- a/ingress/base/patch/crd.yaml
+++ b/ingress/base/patch/crd.yaml
@@ -3,6 +3,8 @@ kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
   name: extensionservices.projectcontour.io
+spec:
+  preserveUnknownFields: null
 status: null
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -10,6 +12,8 @@ kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
   name: httpproxies.projectcontour.io
+spec:
+  preserveUnknownFields: null
 status: null
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -17,4 +21,6 @@ kind: CustomResourceDefinition
 metadata:
   creationTimestamp: null
   name: tlscertificatedelegations.projectcontour.io
+spec:
+  preserveUnknownFields: null
 status: null
