ingress: fix rbac for contour-plus
Signed-off-by: Masayuki Ishii <masa213f@gmail.com>

--- a/ingress/base/common/rbac_contour-plus.yaml
+++ b/ingress/base/common/rbac_contour-plus.yaml
@@ -37,6 +37,18 @@ rules:
     verbs:
       - get
   - apiGroups:
+      - externaldns.k8s.io
+    resources:
+      - dnsendpoints
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
       - cert-manager.io
     resources:
       - certificates
