moco: update image name and tag for 0.3.1.
Signed-off-by: morimoto-cybozu <kenji_morimoto@cybozu.co.jp>

--- a/moco/base/kustomization.yaml
+++ b/moco/base/kustomization.yaml
@@ -5,6 +5,5 @@ resources:
 patchesStrategicMerge:
   - crd.yaml
 images:
-  - name: controller
-    newName: ghcr.io/cybozu-go/moco
-    newTag: 0.3.0
+  - name: ghcr.io/cybozu-go/moco
+    newTag: 0.3.1
