--- a/moco/base/upstream/namespace.yaml
+++ b/moco/base/upstream/namespace.yaml
@@ -4,3 +4,8 @@ metadata:
   labels:
     control-plane: moco-controller-manager
   name: system
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: moco-dummy-secret
