--- a/namespaces/base/kustomization.yaml
+++ b/namespaces/base/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - internet-egress.yaml
 - kube-system.yaml
 - metallb.yaml
+- moco.yaml
 - monitoring.yaml
 - pvc-autoresizer.yaml
 - rook-ceph.yaml
