--- a/monitoring/base/prometheus/prometheus.yaml
+++ b/monitoring/base/prometheus/prometheus.yaml
@@ -23,6 +23,7 @@ rule_files:
   - /etc/prometheus/neco-admission.yaml
   - /etc/prometheus/teleport.yaml
   - /etc/prometheus/topolvm.yaml
+  - /etc/prometheus/vault.yaml
 alerting:
   alertmanagers:
   - static_configs:
