--- a/test/alert_test/vault.yaml
+++ b/test/alert_test/vault.yaml
@@ -38,6 +38,11 @@ tests:
         values: '1+0x15'
       - series: 'vault_barrier_get_count{job="vault", instance="10.69.0.195"}'
         values: '0+1x15'
+      # 10.69.1.131 is up and sealed.
+      - series: 'up{job="vault", instance="10.69.1.131"}'
+        values: '1+0x15'
+      - series: 'vault_barrier_get_count{job="vault", instance="10.69.1.131"}'
+        values: '0+0x15'
     alert_rule_test:
       - eval_time: 15m
         alertname: VaultSealed
@@ -49,3 +54,10 @@ tests:
             exp_annotations:
               summary: Vault on 10.69.0.3 is sealed.
               runbook: Please check the vault status on 10.69.0.3.
+          - exp_labels:
+              severity: warning
+              job: vault
+              instance: 10.69.1.131
+            exp_annotations:
+              summary: Vault on 10.69.1.131 is sealed.
+              runbook: Please check the vault status on 10.69.1.131.
