--- a/neco-admission/base/deployment.yaml
+++ b/neco-admission/base/deployment.yaml
@@ -34,7 +34,7 @@ spec:
         args:
         - --cert-dir=/certs
         - --httpproxy-default-class=forest
-        image: quay.io/cybozu/neco-admission:0.6.1
+        image: quay.io/cybozu/neco-admission:0.6.2
         resources:
           requests:
             cpu: 100m
@@ -59,8 +59,8 @@ spec:
         lifecycle:
             preStop:
               exec:
-                command: ["sh", "-c", "sleep 5"]
-      terminationGracePeriodSeconds: 15
+                command: ["sleep", "5"]
+      terminationGracePeriodSeconds: 10
       volumes:
         - name: certs
           secret:
