--- a/monitoring/base/prometheus/prometheus.yaml
+++ b/monitoring/base/prometheus/prometheus.yaml
@@ -690,3 +690,15 @@ scrape_configs:
       - source_labels: [__meta_kubernetes_namespace]
         action: replace
         target_label: instance
+  - job_name: "registry"
+    kubernetes_sd_configs:
+      - role: pod
+        namespaces:
+          names: ["registry"]
+    relabel_configs:
+      - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_name, __meta_kubernetes_pod_container_port_name]
+        action: keep
+        regex: registry;metrics
+      - source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_instance]
+        action: replace
+        target_label: registry
