monitoring: add dashboard for registry

--- a/monitoring/base/grafana-operator/dashboards/kustomization.yaml
+++ b/monitoring/base/grafana-operator/dashboards/kustomization.yaml
@@ -26,6 +26,7 @@ resources:
   - memory-usage.yaml
   - neco-admission.yaml
   - node-exporter.yaml
+  - registry.yaml
   - sabakan.yaml
   - topolvm-volumegroup.yaml
   - victoriametrics-vmagent.yaml
